--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "type": "module",
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
@@ -64,8 +65,10 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
     "swagger-jsdoc": "^6.0.8",
