--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier"
   ],
   "dependencies": {
+    "aws-sdk": "^2.1604.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -66,6 +67,7 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.2.0",
