--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
-    "xlsx": "^0.18.5"
+    "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "joi": "17.13.3",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.5.0",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "6.9.14",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.7.0",
-    "eslint": "^9.7.0",
-    "globals": "^15.8.0",
-    "nodemon": "^3.1.4"
+    "@eslint/js": "9.7.0",
+    "eslint": "9.7.0",
+    "globals": "15.8.0",
+    "nodemon": "3.1.4"
   }
 }
