--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "https": "^1.0.0",
+    "is-url": "^1.2.4",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "8.5.0",
+    "mongoose": "^8.5.0",
     "multer": "1.4.5-lts.1",
     "nodemailer": "6.9.14",
+    "puppeteer": "^24.1.1",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
